k8s/monetalis-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monetalis-web-service
  namespace: monetalis
  labels:
    app: monetalis-web
spec:
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  selector:
    app: monetalis-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
