k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monetalis-web
  namespace: monetalis
spec:
  selector:
    app: monetalis-web
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
